--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <script src="https://apis.google.com/js/api:client.js"></script>
+    <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
 </head>
 <body>
 <noscript>
